# what-are-the-odds

./: RoadMap.md
arb-finder/: .gitignore  Cargo.toml  diesel.toml
arb-finder/example_responses/: allsports.json
arb-finder/migrations/: Readme.md
arb-finder/migrations/2024-08-18-093139_create_sports/: down.sql  up.sql
arb-finder/migrations/2024-08-18-115435_create_events/: up.sql
arb-finder/migrations/2024-08-19-071611_create_bookies/: up.sql
arb-finder/migrations/2024-08-19-082151_create_odds_offerings/: down.sql  up.sql
arb-finder/migrations/2024-08-31-063301_create_offering_index/: down.sql  up.sql
arb-finder/src/: local_env.rs  main.rs  schema.rs  tennisodds.json
arb-finder/src/common/: bookie_odds.rs  market_info.rs  mod.rs  util.rs
arb-finder/src/db/: Readme.md  latest_odds_query.sql  mod.rs  models.rs
arb-finder/src/db/models/: bookies.rs  events.rs  mod.rs  odds.rs  sports.rs
arb-finder/src/discord/: mod.rs
arb-finder/src/discover_odds/odds_api/: db.rs  mod.rs  requests.rs
arb-finder/src/example_responses/: nfl.json  rugbyleague_nrl_odds.json  soccerodds.json
arb-finder/src/messaging/: mod.rs
arb-finder/src/odds_interface/: api_requests.rs  bookiestat.rs  bookmaker.rs  event.rs  market.rs  mod.rs  odds.rs  response_types.rs  sport.rs  util.rs
arb-finder/src/odds_interface/api_requests/: mod.rs  util.rs
arb-finder/src/odds_interface/exampleresponses/: sportodds.json
arb-finder/src/odds_interface/logic/: event.rs  market.rs  mod.rs  odds.rs
arb-finder/src/odds_interface/odds_api/: mod.rs  types.rs  util.rs
(+16 files in other folders)
