[package]
name = "arb-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = {version = "2.2.2", features = ["postgres", "chrono", "numeric"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
statrs = "0.17.1"
strum_macros = "0.26.3"
strum = "0.26.3"
bigdecimal = { version = "0.4.5", features = ["serde"] }
itertools = "0.13.0"

